# UrFUbe

./: README.md  db.py  main.py  pyproject.toml
followers/: api.py  models.py  schemas.py
templates/: 404.html  auth.html  index.html  user.html  video.html
templates/static/: auth.css  cookiesManager.js  user.css  user.js  video.css  video.js
user/: api.py  auth.py  models.py  routers.py  schemas.py
video/: api.py  models.py  schemas.py  services.py
