[tool.poetry]
name = "urfube"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.151"
python-multipart = "^0.0.5"
fastapi = "^0.63.0"
fastapi-users = "^5.1.3"
ormar = "^0.10.1"
uvicorn = "^0.13.4"
jinja2 = "3.0.0"
aiofiles = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
